[package]
name = "mandelbrot_cli"
version = "0.1.0"
edition = "2021"
description = "A Rust-powered Mandelbrot Set generator."
license = "MIT"
repository = "https://github.com/IronstoneInnovation/mandelbrot_cli"
keywords = ["http", "cache"]
categories = ["web-programming::http-server"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
enterpolation = "0.3.0"
image = "0.25.6"
palette = "0.7.6"
rayon = "1.10.0"
